--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EasyBank - FreeCodeCamp</title>
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/app/scss/style.css">
+</head>
+<body>
+    <header class="header">
+        <nav class="flex flex-jc-sb flex-ai-c">
+            <a href="/" class="header__logo">
+                <img src="images/logo.svg" alt="Easybank" />
+            </a>
+            <a href="#" class="header__menu hide-for-desktop">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+
+            <div class="header__links hide-for-mobile">
+                <a href="http://">Home</a>
+                <a href="http://">About</a>
+                <a href="http://">Contact</a>
+                <a href="http://">Blog</a>
+                <a href="http://">Careers</a>
+            </div>
+
+            <a href="#" class="button header__cta hide-for-mobile">Request Invite</a>
+        </nav>        
+    </header>
+
+    <script src="./app/js/main.js"></script>
+</body>
+</html>
